adding exer 2 and 3

--- a/oop_practice.ipynb
+++ b/oop_practice.ipynb
@@ -261,6 +261,117 @@
     "total_discount = shirt_one.discount(.14) + shirt_two.discount(.06)\n",
     "print(total_discount)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$~$\n",
+    "\n",
+    "### Exercise: Use the Pant class\n",
+    "\n",
+    "_____\n",
+    "\n",
+    "$~$\n",
+    "\n",
+    "Write a Pants class with the following characteristics:\n",
+    "\n",
+    "+ the class name should be Pants\n",
+    "\n",
+    "+ the class attributes should include:\n",
+    "\n",
+    "    +  color\n",
+    "    +  waist_size\n",
+    "    +  length\n",
+    "    +  price\n",
+    "\n",
+    "$~$\n",
+    "    \n",
+    "+ the class should have an init function that initializes all of the attributes\n",
+    "\n",
+    "+ the class should have two methods:\n",
+    "    + change_price() a method to change the price attribute\n",
+    "    + discount() to calculate a discount\n",
+    "\n",
+    "$~$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pants:\n",
+    "    \n",
+    "    def __init__(self,color,waist_size,length,price):\n",
+    "        self.color = color\n",
+    "        self.waist_size = waist_size\n",
+    "        self.length = length\n",
+    "        self.price = price\n",
+    "    \n",
+    "    def change_price(self,new_price):\n",
+    "        self.price = new_price\n",
+    "    \n",
+    "    def discount(self,percentage):\n",
+    "        return self.price * (1 - percentage)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$~$\n",
+    "\n",
+    "### Exercise: SalesPerson class\n",
+    "\n",
+    "_____\n",
+    "\n",
+    "$~$\n",
+    "\n",
+    "The Pants class and Shirt class are quite similar. Here is an exercise to give you more practice writing a class. **This exercise is trickier than the previous exercises**.\n",
+    "\n",
+    "Write a SalesPerson class with the following characteristics:\n",
+    "\n",
+    "+ the class name should be SalesPerson\n",
+    "+ the class attributes should include:\n",
+    "    + first_name\n",
+    "    + last_name\n",
+    "    + employee_id\n",
+    "    + salary\n",
+    "    + pants_sold\n",
+    "    + total_sales\n",
+    "+ the class should have an init function that initializes all of the attributes\n",
+    "+ the class should have four methods:\n",
+    "    + sell_pants() a method to change the price attribute\n",
+    "    + calculate_sales() a method to calculate the sales\n",
+    "    + display_sales() a method to print out all the pants sold with nice formatting\n",
+    "    + calculate_commission() a method to calculate the salesperson commission based on total sales and a percentage\n",
+    "\n",
+    "$~$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SalesPerson:\n",
+    "\n",
+    "    def __init__(self, first_name, last_name, employee_id, salary):\n",
+    "        self.first_name = first_name\n",
+    "        self.last_name = last_name\n",
+    "        self.employee_id = employee_id\n",
+    "        self.salary = salary\n",
+    "        self.pants_sold = []\n",
+    "        self.total_sales = 0\n",
+    "    \n",
+    "    def sell_pats(self, pants_object):\n",
+    "        self.pants_sold.append(pants_object)\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
