--- a/oop_practice.ipynb
+++ b/oop_practice.ipynb
@@ -303,17 +303,49 @@
    "outputs": [],
    "source": [
     "class Pants:\n",
+    "    \"\"\"The Pants class represents an article of clothing sold in a store\n",
+    "    \"\"\"\n",
     "    \n",
     "    def __init__(self,color,waist_size,length,price):\n",
+    "        \"\"\"Method for initializing a Pants object\n",
+    "\n",
+    "        Args: \n",
+    "            color (str)\n",
+    "            waist_size (int)\n",
+    "            length (int)\n",
+    "            price (float)\n",
+    "\n",
+    "        Attributes:\n",
+    "            color (str): color of a pants object\n",
+    "            waist_size (str): waist size of a pants object\n",
+    "            length (str): length of a pants object\n",
+    "            price (float): price of a pants object\n",
+    "        \"\"\"\n",
     "        self.color = color\n",
     "        self.waist_size = waist_size\n",
     "        self.length = length\n",
     "        self.price = price\n",
     "    \n",
     "    def change_price(self,new_price):\n",
+    "        \"\"\"The change_price method changes the price attribute of a pants object\n",
+    "\n",
+    "        Args: \n",
+    "            new_price (float): the new price of the pants object\n",
+    "\n",
+    "        Returns: None\n",
+    "\n",
+    "        \"\"\"\n",
     "        self.price = new_price\n",
     "    \n",
     "    def discount(self,percentage):\n",
+    "        \"\"\"The discount method outputs a discounted price of a pants object\n",
+    "\n",
+    "        Args:\n",
+    "            percentage (float): a decimal representing the amount to discount\n",
+    "\n",
+    "        Returns:\n",
+    "            float: the discounted price\n",
+    "        \"\"\"\n",
     "        return self.price * (1 - percentage)\n"
    ]
   },
@@ -353,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,11 +399,39 @@
     "        self.pants_sold = []\n",
     "        self.total_sales = 0\n",
     "    \n",
+    "\n",
     "    def sell_pats(self, pants_object):\n",
     "        self.pants_sold.append(pants_object)\n",
     "    \n",
-    "    "
+    "\n",
+    "    def calculate_sales(self):\n",
+    "        total = 0\n",
+    "        for pants in self.pants_sold:\n",
+    "            total += pants.price\n",
+    "        self.total_sales = total\n",
+    "        return total\n",
+    "    \n",
+    "    def display_sales(self):\n",
+    "        for pants in self.pants_sold:\n",
+    "            print('color: {}, waist_size: {},length: {}, price: {} '\\\n",
+    "                .format(pants.color, pants.waist_size, pants.length, pants.price))\n",
+    "    \n",
+    "    def calculate_comision(self, percentage):\n",
+    "        sales_total = self.calculate_sales()\n",
+    "        return sales_total * percentage"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
